finish all models

--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -11,7 +11,7 @@
     %ul.left
       %li= link_to "EQUIPMENT", products_path
       %li= link_to "PARTS", parts_path
-      %li= link_to "CONSUMABLES", "#"
+      %li= link_to "CONSUMABLES", consumables_path
     %ul.right
       %li.search
         %form
