--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,13 +16,14 @@
    <%= render 'layouts/nav' %>
    <div class="clear"></div>
    <div id="content">
-    
+    <div class="row">
      <div class = "large-12 columns">
       <div id="main_yield" class="large-12 columns">
         <%= yield %>
       </div>
     </div>
   </div>
+</div>
 </div>
     <%= javascript_include_tag "application" %>
   </body>
