--- a/app/views/parts/show.html.haml
+++ b/app/views/parts/show.html.haml
@@ -31,5 +31,4 @@
   %h2 used for
   = render @part.uses
 .large-12.columns
-  = link_to 'Edit', edit_part_path(@part), :class => 'btn sign_in button left' | 
-  \#{link_to 'Back', parts_path, :class => 'btn sign_in button'}
+  = link_to 'Back', parts_path, :class => 'btn sign_in button left'
