--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -16,5 +16,4 @@
   %h2 Properties
   = render @product.properties
 .large-12.columns
-  = link_to 'Edit', edit_product_path(@product), :class => 'btn sign_in button left' | 
-  \#{link_to 'Back', products_path, :class => 'btn sign_in button'}
+  = link_to 'Back', products_path, :class => 'btn sign_in button left'
