--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,28 +1,24 @@
 <div id="submenu">
   <h4 class="title">All Equipment</h4>
 </div>
-<div class="link_add large-12 columns">
-  <%= link_to 'Add Equipment', new_product_path, :class => 'btn sign_in button left' %>
-</div>
+
 <table class="large-12 columns">
   <thead>
     <tr>
+      <th>ID</th>
       <th>Title</th>
       <th>Description</th>
-      <th colspan="3"></th>
+      <th colspan="1"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @products.each do |product| %>
       <tr>
+        <td><%= link_to product.id, product %></td>
         <td><%= link_to product.title, product %></td>
-        <td><%= product.description %></td>
-        
-        <td><%= link_to 'Edit', edit_product_path(product), :class => 'btn sign_in button' %></td>
-        <td><%= link_to "Subcategory", product, :class => 'btn sign_in button'  %></td>
-        <td><%= link_to "Properties", product, :class => 'btn sign_in button' %></td>
-        <td><%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn sign_in button' %></td>
+        <td><%= sanitize product.description %></td>
+        <td><%= button_to "Make Request", line_items_path(:product_id => product), :class => 'btn sign_in button' %></td>
       </tr>
     <% end %>
   </tbody>
