--- a/app/views/consumable_properties/_consumable_properties.html.erb
+++ b/app/views/consumable_properties/_consumable_properties.html.erb
@@ -20,7 +20,8 @@
   </p>
    <p>
     	<strong>Date Received : </strong>
-    <%= consumable_properties.date_received %>
+    <%= consumable_properties.date_received 
+    %>
   </p>
   <p>
   
