--- a/app/views/properties/_property.html.erb
+++ b/app/views/properties/_property.html.erb
@@ -1,12 +1,10 @@
 <p>
-    <%= property.name %>
+    <%= property.name %> : <%= property.value %>
 </p>
-<p>
-    <%= property.value %>
-  </p>
+
   <p>
-  <%= link_to 'Destroy property', [property.product, property],
+ <!--  <%= link_to 'Destroy property', [property.product, property],
                method: :delete,
                data: { confirm: 'Are you sure?' } %>
-</p>
+</p> -->
   <hr>
